<resources>
    <string name="q_title_p">Patient questionnaire : </string>
    <string name="next">Next</string>
    <string name="help_1_note">Mental health concerns are a common issue in patients living with Inflammatory Bowel Disease. Based on your responses, the program has calculated your levels of anxiety, depression and stress.\n\nPlease be aware that these results are only subjective. A comprehensive assessment by a trained mental health specialist is needed to confirm any diagnosis or symptom severity.\n\nIf you have any concerns or questions, please talk to your IBD nurse, gastroenterologist, medical practitioner or mental health professional (e.g., psychiatrist, psychologist).</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="symptoms_worsen">Do you have an appointment with a mental health expert within the next 14 days or willing to contact your local doctor (GP) if your mental health symptoms worsen?</string>
    <string name="mental_healt_professional">Are you currently seeing a mental health professional?</string>
    <string name="suicidal">Do you consider hurting yourself, others, or feel suicidal?</string>
    <string name="stress_severity_level">Stress severity level</string>
    <string name="depression_severity_level">Depression severity level</string>
    <string name="anxiety_severity_level">Anxiety severity level</string>
    <string name="stress_severity_score">Stress score:</string>
    <string name="depression_severity_score">Depression score:</string>
    <string name="anxiety_severity_score">Anxiety score:</string>
    <string name="end_describtion">Please return this tablet to reception</string>
    <string name="end_title">Thank you for your responses and feedback</string>
    <string name="touch_here_start_screen">Touch here to go\nback to start screen</string>
    <string name="second_title">Based on these scores the following advice was provided:</string>
    <string name="thank_u">Thank you for completing the brief health assessment</string>
    <string name="please_note">Please note:</string>
    <string name="please_note_text">Mental health concerns are a common issue in patients living with Inflammatory Bowel Disease. Based on your responses, the program has calculated your levels of anxiety, depression and stress.\n\nPlease be aware that these results are only subjective. A comprehensive assessment by a trained mental health specialist is needed to confirm any diagnosis or symptom severity.\n\nIf you have any concerns or questions, please talk to your IBD nurse, gastroenterologist, medical practitioner or mental health professional (e.g., psychiatrist, psychologist).</string>
    <string name="severity_level">Severity level</string>
    <string name="level_1_title">Individuals tend to report minimal levels of psychological distress</string>
    <string name="level_2_title">Individuals tend to report some symptoms which may be associated with psychological distress</string>
    <string name="level_3_title">Individuals tend to report symptoms, which more often than not, may be associated with psychological distress</string>
    <string name="level_4_title">Individuals tend to report strong and frequent symptoms which may be associated with psychological distress</string>
    <string name="leve_1_sub_title">For further information and strategies to manage psychological distress related to IBD please go to  IBDclinic.org.au</string>
    <string name="leve_2_sub_title">We recommend you meet with your mental health professional or doctor if symptoms worsen. For further information and strategies to manage psychological distress related to IBD please go to IBDclinic.org.au</string>
    <string name="leve_3_sub_title">We recommend you contact your mental health professional or doctor within 24 hours and arrange a mental health review. Please also feel free to contact your local hospital IBD nurse or Lifeline.org.au</string>
    <string name="leve_4_sub_title">We recommend you contact your mental health professional or doctor immediately to arrange a mental health review. Please also feel free to contact your local hospital IBD nurse or Lifeline.org.au</string>
    <string name="level_3_4_describtion">Are you considering harming yourself or thinking about suicide?\nPlease talk about these thoughts/feelings with your Gastroenterologist/IBD nurse </string>
    <string name="result_bottom_01">If you have any questions or concerns please talk to your Gastroenterologist or IBD nurse</string>
    <string name="result_bottom_02">Please review these results with your Gastroenterologist or IBD nurse</string>
    <string name="print_question_subtitle_2">In relation to your PSYCHOLOGICAL health, you were identified to have the following results : </string>
    <string name="p_q_1">In the past 3 months your IBD has been:</string>
    <string name="p_q_2">Overall level of self-confidence when it comes to managing your own PHYSICAL health? </string>
    <string name="p_q_3">PAIN LEVELS on average over the last 24 hours? </string>
    <string name="p_q_4">FATIGUE LEVELS on average over the last 24 hours? </string>
    <string name="print_question_subtitle_1">In relation to your PHYSICAL health, you were identified to have the following results:</string>
    <string name="print_title">Outpatient Brief Health Assessment Review Summary of Results</string>
    <string name="print_title_1">Outpatient Brief Health Assessment Review</string>
    <string name="print_title_2">Summary of Results</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="patient_result">Patient Results</string>
    <string name="pat_text">Please write down on the slip of paper provided the following results to discuss with your Gastroenterologist/IBD nurse:</string>
    <string name="anxiety_score">DASS Anxiety score</string>
    <string name="depression_score">DASS Depression score</string>
    <string name="stress_score">DASS Stress score</string>
    <string name="out_patient">Outpatient Brief\nMental Health Review</string>
    <string name="brief">Mental health concerns are a common issue in patients living with Inflammatory Bowel Disease. This program will ask you about your mental health symptoms and provide feedback about various options that may be of benefit.\n\nTotal time to complete this assessment will be 10 minutes.\n\nIf you have any concerns, please talk to your IBD nurse or Gastroenterologist.</string>
    <string name="mid_fb">We are looking to develop an online support tool that patients can use on a fortnightly basis to report and manage their IBD symptoms, medications, mental health and quality of life.\n \nThis online service would NOT replace your current visits to the outpatient IBD clinic, but allow us to work with you more effectively to manage your IBD.\n \nThis online service would also allow you to communicate with your health professionals.\n \nThe following questions ask about your interest in using the online service.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change Password</string>
    <string name="patient_question_setting_all">ALL question</string>
    <string name="patient_question_setting_all_hint">Initial, feedback, post-feedback question</string>
    <string name="patient_question_setting_only_hint">Initial, feedback question</string>
    <string name="patient_question_setting_only_feedback">Only Feedback question</string>
    <string name="patient_question_setting">Patient question</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="tag_fragment_FileSave">File Save</string>
    <string name="file_extension_xml">.xls</string>
    <string name="file_extension_pdf">.pdf</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_file_save_as">Save File As</string>
    <string name="hint_filename_unadorned">Enter file name</string>
    <string name="setting">Setting</string>
    <string name="spinner_prompt"></string>
    <string name="p_q">Patient questionnaire</string>
    <string name="app_name">IBD</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="stress">Stress</string>
    <string name="anxiety">anxiety</string>
    <string name="depression">Depression</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>
    <string name="six">6.</string>
    <string name="seven">7.</string>
    <string name="eight">8.</string>
    <string name="nine">9.</string>
    <string name="ten">10.</string>
    <string name="eleven">11.</string>
    <string name="twelve">12.</string>
    <string name="thirteen">13.</string>
    <string name="fourteen">14.</string>
    <string name="fifteen">15.</string>
    <string name="sixteen">16.</string>
    <string name="seventeen">17.</string>
    <string name="eighteen">18.</string>
    <string name="nineteen">19.</string>
    <string name="twenty">20.</string>
    <string name="twenty_one">21.</string>
    <string name="twenty_two">22.</string>
    <string name="twenty_three">23.</string>
    <string name="twenty_four">24.</string>
    <string name="twenty_five">25.</string>
    <string name="twenty_six">26.</string>
    <string name="twenty_seven">27.</string>
    <string name="twenty_eight">28.</string>
    <string name="twenty_nine">29.</string>
    <string name="thirty">30.</string>
    <string name="thirty_one">31.</string>
    <string name="thirty_two">32.</string>
    <string name="thirty_three">33.</string>
    <string name="thirty_four">34.</string>
    <string name="thirty_five">35.</string>
    <string name="thirty_six">36.</string>
    <string name="thirty_seven">37.</string>
    <string name="bacgroundset">bacgroundset</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="log">Log</string>
    <string name="export">Export</string>
    <string name="password">Possword</string>
    <string name="print">Print</string>
    <string name="patient_q_1">1. Age ?</string>
    <string name="patient_q_2">2. Gender ?</string>
    <string name="patient_q_3">3. Condition ?</string>
    <string name="patient_q_4">4. Number of years diagnosed with IBD?  </string>
    <string name="patient_q_5">5. In the past 3 months my IBD has been ?</string>
    <string name="patient_q_6">6. How would you rate your quality of life ?</string>
    <string name="patient_q_7">7. How would you rate your level of social support ?</string>
    <string name="patient_q_8">8. Please Rate your overall level of self-confidence when it comes to managing your own PHYSICAL health ?</string>
    <string name="patient_q_9">9. Please Rate your overall level of self-confidence when it comes to managing your own MENTAL health ?</string>
    <string name="patient_q_10">10. How would you rate your quality of sleep ?</string>
    <string name="patient_q_11">11. Average number of hours sleep in the last 24 hours ?</string>
    <string name="patient_q_12">12. I found it hard to wind down</string>
    <string name="patient_q_13">13. I tended to over-react to situations</string>
    <string name="export_new_patient_information">&#160;New patient information</string>
    <string name="export_all_patient_information">&#160;All patient information</string>
    <string name="export_certain_patient_information">&#160;Certain patient information</string>
    <string name="export_patient_info">Export patient information</string>
</resources>